# LLM-toolbox

./: .gitignore  preprocessing.py  pyproject.toml
llm-query/: query_mistral.py
prompts/: template.json
